[metadata]
name = stetho
summary = Stetho is a sophisticated debug bridge for OpenStack Neutron.
description-file =
    README.md
author = "UnitedStackSDN"
author-email = unitedstack-sdn@googlegroups.com
home-page = https://www.ustack.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    stetho

[entry_points]
console_scripts =
    stetho = stetho.stethoclient.shell:main
    stetho-agent = stetho.agent.agent:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 1
warnerrors = true
